--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <!-- Estos son comentarios pronto los visualizaran en en un editor  -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <!--aqui va nuestra propia hoja de estilos-->
+    
+    <link rel="stylesheet" href="estilos.css"/>
+    
     <!-- Bootstrap CSS --><!-- esta parte es la que estilisa un poco nuestro documento html -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
